--- a/_includes/paginated_pages.html
+++ b/_includes/paginated_pages.html
@@ -161,6 +161,17 @@
             data-href="{% if item.type == "video" %}https://youtube.com/watch?v={% endif %}{{ item.link }}"
             data-target="_blank"
             tabindex="0"
+            aria-label="
+              {{ item.title }}
+              {{ item.date | date: "%B %-d, %Y" }}
+              {{ item.description }}
+              Event: {{ item.event }}
+              {% if item.type == "video" %}
+                Watch video
+              {% elsif item.type == "podcast" %}
+                Listen to podcast
+              {% endif %}
+            "
           >
             <div
               class="blog-post-img {% if item.type == "video" %}embed-responsive embed-responsive-16by9{% endif %}"
