Add new SD mobile hero

--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -35,7 +35,7 @@
 
 .page-service-design {
   .hero-banner {
-    background-image: url(/img/hero-mobile-work.svg);
+    background-image: url(/img/service_design/hero-mobile-service-design.svg);
     background-repeat: no-repeat;
     background-size: cover;
 
