Add line breaks to heros and ctas

--- a/_includes/ditap_cta.html
+++ b/_includes/ditap_cta.html
@@ -1,6 +1,6 @@
 {% include cta.html
   header = "Have more questions?"
-  text = "We’ve got answers for you. Please drop us an email and we’ll follow up within one business day."
+  text = 'We’ve got answers for you. Please drop us an email <br class="linebreak">and we’ll follow up within one business day.'
   text_css_class = "page-subfooter-text-col"
   cta_path = "mailto:training@skylight.digital"
   cta = "Email us"
