--- a/_includes/join_us_cta.html
+++ b/_includes/join_us_cta.html
@@ -1,6 +1,6 @@
 {% include cta.html
   header = "Change lives every day."
-  text = "We need great technologists, designers, and more to work on changing how the government serves the public."
+  text = 'We need great technologists, designers, and more to work on changing <br class="linebreak">how the government serves the public.'
   text_css_class = "page-subfooter-text-col"
   cta_path = "/careers/join/"
   cta = "Join us"
