Fix footer bottom padding on service design page

--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -7,7 +7,9 @@
       padding-bottom: 3rem !important;
     }
   }
+}
 
+.page-offering {
   .hero-container {
     height: auto;
     max-width: 1140px;
