Add some a11y fixes

--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -270,7 +270,7 @@ $outline-light: 2px solid #f2f2f2;
   }
 
   span {
-    color: $blue-100-a;
+    color: $blue-200;
     padding: 4px 12px;
     letter-spacing: 0.05em;
     position: relative;
