Keep smaller font size on DITAP pgs

--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -7,6 +7,11 @@
       padding-bottom: 3rem !important;
     }
   }
+
+  // Kepp old font size until design review
+  .hero-heading {
+    font-size: 2rem;
+  }
 }
 
 .page-offering {
