Dont display linebreaks on toolkit cards

--- a/_sass/pages/_toolkits.scss
+++ b/_sass/pages/_toolkits.scss
@@ -1,6 +1,9 @@
-.toolkit-item {
-  border: 1px solid $gray-lightest;
-  border-bottom: 4px solid $brand-primary-light;
+.page-toolkits {
+  .card-text {
+    .linebreak {
+      display: none;
+    }
+  }
 }
 
 .page--toolkit {
