Add "us" to Contact and Join footer links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,7 @@
           <div class="footer-links">
             <h2>Careers</h2>
             <ul>
-              <li><a href="/careers/join/">Join</a></li>
+              <li><a href="/careers/join/">Join us</a></li>
             </ul>
           </div>
         </div>
@@ -55,7 +55,7 @@
           <div class="footer-links">
             <h2>Connect</h2>
             <ul>
-              <li><a href="/connect/contact/">Contact</a></li>
+              <li><a href="/connect/contact/">Contact us</a></li>
               <li><a href="/connect/contracting/">Contracting</a></li>
             </ul>
           </div>
