--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -38,6 +38,15 @@ h6 {
 }
 
 %list-base {
+  ul,
+  ol {
+    padding-left: 1ch;
+  }
+
+  ul ul {
+    margin-top: 0.5em;
+  }
+
   li {
     padding-bottom: 1rem;
 
@@ -98,14 +107,18 @@ h6 {
 }
 
 .list-checklist {
+  padding-left: 0 !important;
+
   li {
     &::before {
       content: "□" !important;
     }
   }
 
-  ul li::before {
-    font-size: $font-size-base !important;
+  ul {
+    li::before {
+      font-size: $font-size-base !important;
+    }
   }
 }
 
@@ -133,7 +146,7 @@ h6 {
   @extend %left-justified-list;
 
   li {
-    padding-bottom: 0.25rem;
+    padding-bottom: 0.5em;
   }
 }
 
