--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -21,6 +21,7 @@ $green-80: #99c5a6;
 $green-100: #80b690;
 $green-200: #609c70;
 $green-300: #418152;
+$green-300-a: #407F51;
 
 $red-20: #f9e0de;
 $red-40: #f2c1be;
