--- a/_sass/pages/_accessibility_toolkit.scss
+++ b/_sass/pages/_accessibility_toolkit.scss
@@ -1,22 +1,8 @@
 .accessibility-guide {
-
-  blockquote {
-    /*@extend .callout--alt;*/
+  .example {
+    background-color: white;
   }
 
-  /*fieldset {
-    border: 1px solid #393939;
-    border-radius: 0.6rem;
-    padding: 1.2rem;
-    margin-bottom: 2rem;
-  }
-
-  legend {
-    font-size: 1.5rem;
-    font-weight: 700;
-    border: 0;
-    padding: 0;
-  }*/
   .form-check-label {
     padding-left: 0.5rem;
     margin-bottom: 0; // Override default `<label>` bottom margin
@@ -118,7 +104,7 @@
   }
 
   .na, .m, .nb {
-    color: #407F51 !important;
+    color: $green-300-a !important;
   }
 
   .s, .sa, .dl, .nl {
@@ -165,6 +151,10 @@ pre {
 
 code {
   font-family: $font-family-mono;
+}
+
+.language-plaintext {
+  word-break: break-all;
 }
 
 p code {
