--- a/_sass/pages/_accessibility_toolkit.scss
+++ b/_sass/pages/_accessibility_toolkit.scss
@@ -71,30 +71,6 @@
   }
 }
 
-.callout--example,
-.example {
-  margin-top: 1em;
-  margin-bottom: 1rem;
-  font-size: 1.125rem;
-  padding: 1rem;
-  border: 1px solid $gray-lightest;
-  border-radius: 3px;
-
-  .form-group {
-    label {
-      font-weight: bold;
-    }
-  }
-
-  *:last-child {
-    margin-bottom: 0;
-  }
-
-  + .example {
-    margin-top: 2rem;
-  }
-}
-
 .highlight {
   background-color: $gray-1 !important;
   font-family: $font-family-mono !important;
@@ -135,13 +111,29 @@
   }
 }
 
-.example + .language-html.highlighter-rouge {
+.example {
+  .form-group {
+    label {
+      font-weight: bold;
+    }
+  }
+
+  *:last-child {
+    margin-bottom: 0;
+  }
+
+  + .example {
+    margin-top: 2rem;
+  }
+
+ + .language-html.highlighter-rouge {
   border-top: none;
   margin-top: calc(-1rem - 5px);
 
-  .highlight {
-    border-top-left-radius: 0 !important;
-    border-top-right-radius: 0 !important;
+    .highlight {
+      border-top-left-radius: 0 !important;
+      border-top-right-radius: 0 !important;
+    }
   }
 }
 
@@ -151,10 +143,6 @@ pre {
 
 code {
   font-family: $font-family-mono;
-}
-
-.language-plaintext {
-  word-break: break-all;
 }
 
 p code {
