--- a/_sass/pages/_accessibility_toolkit.scss
+++ b/_sass/pages/_accessibility_toolkit.scss
@@ -1,8 +1,4 @@
 .accessibility-guide {
-  .example {
-    background-color: white;
-  }
-
   .form-check-label {
     padding-left: 0.5rem;
     margin-bottom: 0; // Override default `<label>` bottom margin
@@ -33,36 +29,8 @@
   }
 }
 
-.passes {
-  color: $green-300;
-
-  &::after {
-    display: inline-block;
-    content: '  ';
-    background-image: url('/img/toolkits/accessibility/check-circle.svg');
-    color: $brand-success;
-    background-size: 18px 18px;
-    height: 18px;
-    width: 18px;
-    margin-bottom: -2px;
-    margin-left: 0.5rem;
-  }
-}
-
-.fails {
-  color: $red-200;
-
-  &::after {
-    display: inline-block;
-    content: '  ';
-    background-image: url('/img/toolkits/accessibility/times-circle.svg');
-    background-size: 18px 18px;
-    color: $sk-red;
-    height: 18px;
-    width: 18px;
-    margin-bottom: -2px;
-    margin-left: 0.5rem;
-  }
+.example--code {
+  background-color: white;
 }
 
 .page-work-toolkits-accessibility-guide-color {
