Update imgs and captions

--- a/_sass/pages/_toolkits.scss
+++ b/_sass/pages/_toolkits.scss
@@ -345,3 +345,8 @@ $icon-size: 2rem;
     word-break: break-all;
   }
 }
+
+.img--sd-discovery {
+  background-color: $ochre-20;
+  padding: 1.5rem;
+}
