--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -26,7 +26,7 @@ image_description: Skylight toolkit banner showing a collection of different too
         </nav>
       </div>
     </div>
-    <section class="col-12 col-md-9 page--toolkit text prose order-1 order-md-2 {{page.toolkit_name}}">
+    <section class="col-12 col-md-9 page--toolkit text prose order-1 order-md-2 {{page.toolkit_name}} page--{{ page.sidenav | slugify }}">
       {{ content }}
 
       {% assign items = site.data.toolkits[page.sidenav].toc %}
