--- a/_sass/pages/_toolkits.scss
+++ b/_sass/pages/_toolkits.scss
@@ -317,6 +317,12 @@ $icon-size: 2rem;
   .badge-sub {
     margin-left: 0.5ch;
   }
+
+  .page--service-design-framework {
+    @include media-breakpoint-up(md) {
+      margin-top: 0.25rem;
+    }
+  }
 }
 
 .callout--example,
