--- a/_includes/service_design_framework_cta.html
+++ b/_includes/service_design_framework_cta.html
@@ -2,7 +2,7 @@
   header = "Embrace service design."
   text = 'Ready to deliver better user experiences through service design? <br class="linebreak">Our experts are here to help.'
   text_css_class = "page-subfooter-text-col"
-  cta_path = "mailto:hello@skylight.digital"
+  cta_path = "/connect/contact/"
   cta = "Contact us"
   icon_css_class = "fa fa-at"
 %}
