--- a/_sass/pages/_manifest.scss
+++ b/_sass/pages/_manifest.scss
@@ -1,21 +1,22 @@
-@import 'common';
-@import 'landing';
-@import 'about';
-@import 'services';
-@import 'projects';
-@import 'project';
-@import 'values';
-@import 'policies';
-@import 'policy';
-@import 'join';
-@import 'ditap';
-@import 'form_pages';
-@import 'blog';
-@import 'post';
-@import 'filter';
-@import 'contracting';
-@import 'toolkits';
-@import 'training';
-@import 'talks';
-@import 'press';
-@import 'accessibility_toolkit';
+@import "common";
+@import "landing";
+@import "about";
+@import "services";
+@import "projects";
+@import "project";
+@import "values";
+@import "policies";
+@import "policy";
+@import "join";
+@import "ditap";
+@import "form_pages";
+@import "blog";
+@import "post";
+@import "filter";
+@import "contracting";
+@import "toolkits";
+@import "training";
+@import "talks";
+@import "press";
+@import "accessibility_toolkit";
+@import "brand";
