--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -2,3 +2,11 @@
   color: $brand-primary;
   font-weight: bold;
 }
+
+.page-brand {
+  &:not(.page-brand-guidelines) {
+    footer {
+      border-top: 1px solid $gray-lightest;
+    }
+  }
+}
