Add margin to footer

--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -7,6 +7,7 @@
   &:not(.page-brand-guidelines) {
     footer {
       border-top: 1px solid $gray-lightest;
+      margin-top: 1rem;
     }
   }
 }
