Add Brand to header and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,7 @@
             <ul>
               <li><a href="/company/about/">About</a></li>
               <li><a href="/company/values/">Values</a></li>
+              <li><a href="/company/brand/">Brand</a></li>
               <li><a href="/company/press/">Press</a></li>
               <li><a href="/company/policies/">Policies</a></li>
               <li><a href="https://skylight-swag.myshopify.com/">Store</a></li>
