--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,6 +39,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{{site.baseurl}}/company/about/">About us</a>
             <a class="dropdown-item" href="{{site.baseurl}}/company/values/">Our values</a>
+            <a class="dropdown-item" href="{{site.baseurl}}/brand/">Brand</a>
             <a class="dropdown-item" href="{{site.baseurl}}/company/press/">Press</a>
             <a class="dropdown-item" href="https://skylight-swag.myshopify.com/">Store</a>
           </div>
