Link footer logo to homepage

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="footer-content">
     <div class="footer-brand">
-      <a class="footer-brandmark">Skylight Logo</a>
+      <a class="footer-brandmark" href="/">Skylight Logo</a>
     </div>
 
     <nav class="footer-nav">
