--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -40,7 +40,11 @@ image_description: Skylight toolkit banner showing a collection of different too
               <a class="pagination-alt__step pagination-alt__step--previous" href="{{ items[prev_i].url }}">
                 <span><i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i></span>
                 <span>
-                  Previous<span class="d-none d-sm-inline"> section</span>
+                  {% if page.toolkit_name == "brand" %}
+                    {{ items[prev_i].title }}
+                  {% else %}
+                    Previous<span class="d-none d-sm-inline"> section</span>
+                  {% endif %}
                 </span>
               </a>
               {% endunless %}
@@ -49,7 +53,11 @@ image_description: Skylight toolkit banner showing a collection of different too
               {% unless page.url == items.last.url %}
                 <a class="pagination-alt__step pagination-alt__step--next" href="{{ items[next_i].url }}">
                   <span>
-                    Next<span class="d-none d-sm-inline"> section</span>
+                    {% if page.toolkit_name == "brand" %}
+                      {{ items[next_i].title }}
+                    {% else %}
+                      Next<span class="d-none d-sm-inline"> section</span>
+                    {% endif %}
                   </span>
                   <span><i class="fal fa-long-arrow-right ml-2" aria-hidden="true"></i></span>
                 </a>
