--- a/_includes/head.html
+++ b/_includes/head.html
@@ -215,7 +215,7 @@
         "@type": "WebPage",
         "url": "{{canonical_url}}",
         "name": "{{title}}",
-        "description": "{{description}}",
+        "description": "{{description}}"
       }
     </script>
   {% endif %}
