Update link style

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -240,6 +240,12 @@ blockquote {
 
 .link--cta {
   border-bottom: none !important;
+
+  &:hover {
+    .link__text--cta {
+      color: $link-hover-color;
+    }
+  }
 }
 
 .link__text--cta {
