Add some  initial style

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -43,6 +43,10 @@
   background-color: $brand-gray-light;
 }
 
+.bg-gray-lightest {
+  background-color: $gray-1;
+}
+
 .bg-ochre-lightest {
   background-color: $ochre-20;
 }
