--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -14,4 +14,9 @@
   .nav-link {
     background-image: none !important;
   }
+
+  .grid-container,
+  .header {
+    max-width: $size-desktop-lg;
+  }
 }
