--- a/_sass/_spacing.scss
+++ b/_sass/_spacing.scss
@@ -89,6 +89,10 @@
   %mb-lg-9 { @include mb-9; }
 }
 
+.maxw-none {
+  max-width: none !important;
+}
+
 .maxw-mobile-lg {
   max-width: 480px !important;
 }
