--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -237,3 +237,22 @@ blockquote {
 .post-content {
   @include responsive-headings;
 }
+
+.link--cta {
+  border-bottom: none !important;
+
+  &:hover {
+    .link__text--cta {
+      color: $link-hover-color;
+    }
+  }
+}
+
+.link__text--cta {
+  @include link-decoration(
+    $text-link-color,
+    $text-link-hover-color,
+    $text-link-border,
+    $text-link-border-hover
+  );
+}
