--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -20,6 +20,10 @@
   .footer {
     max-width: $size-desktop-lg;
   }
+
+  .hero-heading {
+    font-size: 3rem;
+  }
 }
 
 .page-brand-guidelines {
