--- a/_includes/hero_banner_brand.html
+++ b/_includes/hero_banner_brand.html
@@ -8,7 +8,7 @@
   {% endif %}
 >
   <header class="hero hero-banner mb-5 {% if include.class %}{{ include.class }}{% endif %}">
-    <div class="hero-container container-fluid text-center">
+    <div class="brand-hero__content hero-container grid-container justify-content-end py-6">
       <{% if page.layout == "toolkit" %}p{% else %}h1{% endif %} class="hero-heading {% if include.text == 'dark' %}text-ink{% endif %}">
         {% if include.hero_title %}
           {{ include.hero_title }}
@@ -18,7 +18,7 @@
           {{ page.title }}
         {% endif %}
       </{% if page.layout == "toolkit" %}p{% else %}h1{% endif %}>
-      <div class="hero-content {% if include.text == 'dark' %}text-ink{% endif %}">
+      <div class="hero-content mx-0 {% if include.text == 'dark' %}text-ink{% endif %}">
         {% if page.layout == "toolkit" %}
           {{ site.data.toolkits[page.sidenav].description }}
         {% else %}
