--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body class="page-{% if page.class %}{{ page.class }}{% else %}{{ page.title | slugify }}{% endif %} page-{{ page.permalink | slugify }} page-{{ page.url | replace:'/',' ' | truncatewords: 1 | remove:'...' }}" data-spy="scroll" data-target="#sidenav" data-offset="10">
+  <body class="page-{% if page.class %}{{ page.class }}{% else %}{{ page.title | slugify }}{% endif %} page-{{ page.permalink | slugify }} page-{{ page.url | replace:'/',' ' | truncatewords: 1 | remove:'...' }} {% if page.toolkit_name == "brand" %}page--{{ page.sidenav | slugify }}{% endif %}" data-spy="scroll" data-target="#sidenav" data-offset="10">
     <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
 
     {% include header.html %}
