--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,8 @@
     {% assign talk_name = page.name |  replace: "-", " " | capitalize_all %}
     {% assign description = "The collection of talks delivered by " | append: talk_name %}
   {% elsif page.filter_type == "project" %}
-    {% assign description = "The projects (name) has worked on." | append: page.name %}
+    {% assign pn = page.name |  replace: "-", " " | capitalize_all %}
+    {% assign description = "The projects " | append: pn | append: " has worked on." %}
   {% elsif page.layout == "tag_filter" %}
     {% assign description = "The collection of blog posts associated with this tag." %}
   {% elsif page.excerpt and page.layout != 'policy' %}
