--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -9,6 +9,10 @@
       border-top: 1px solid $gray-lightest;
       margin-top: 2rem;
     }
+
+    h1 {
+      @include kicker;
+    }
   }
 
   .nav-link {
@@ -26,7 +30,23 @@
     font-size: 3rem;
   }
 
+  h1 + h2 {
+    margin-top: 0;
+  }
+}
 
+.brand__content {
+  p {
+    font-size: $font-size-small;
+  }
+
+  img {
+    width: 100%;
+  }
+}
+
+.brand__content-section {
+  margin-top: 3rem;
 }
 
 .page-brand-guidelines {
