--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,15 +38,16 @@
   {% endif %}
   {% if page.filter_type == "post" %}
     {% assign blog_name = page.name |  replace: "-", " " | capitalize_all %}
-    {% assign description = "The collection of blog posts authored by " | append: blog_name %}
+    {% assign description = "The collection of blog posts authored by " | append: blog_name | append: "." %}
   {% elsif page.filter_type == "talk" %}
     {% assign talk_name = page.name |  replace: "-", " " | capitalize_all %}
-    {% assign description = "The collection of talks delivered by " | append: talk_name %}
+    {% assign description = "The collection of talks delivered by " | append: talk_name | append: "." %}
   {% elsif page.filter_type == "project" %}
     {% assign pn = page.name |  replace: "-", " " | capitalize_all %}
     {% assign description = "The projects " | append: pn | append: " has worked on." %}
   {% elsif page.layout == "tag_filter" %}
-    {% assign description = "The collection of blog posts associated with this tag." %}
+    {% assign tn = page.name |  replace: "-", " " %}
+    {% assign description = "The collection of blog posts associated with the tag: " | append: tn | append: pn | append: "." %}
   {% elsif page.excerpt and page.layout != 'policy' %}
     {% assign description = page.excerpt | strip_html | xml_escape %}
   {% elsif page.description %}
