Rm extra append

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,7 +47,7 @@
     {% assign description = "The projects " | append: pn | append: " has worked on." %}
   {% elsif page.layout == "tag_filter" %}
     {% assign tn = page.name |  replace: "-", " " %}
-    {% assign description = "The collection of blog posts associated with the tag: " | append: tn | append: pn | append: "." %}
+    {% assign description = "The collection of blog posts associated with the tag: " | append: tn | append: "." %}
   {% elsif page.excerpt and page.layout != 'policy' %}
     {% assign description = page.excerpt | strip_html | xml_escape %}
   {% elsif page.description %}
