--- a/_includes/head.html
+++ b/_includes/head.html
@@ -46,10 +46,11 @@
   {% elsif page.filter_type == "project" %}
     {% assign pn = page.name |  replace: "-", " " | capitalize_all %}
     {% assign description = "The projects " | append: pn | append: " has worked on." %}
+  
   {% elsif page.layout == "tag_filter" %}
     {% assign tf = page.slug | replace: '_', ' ' %}
     {% assign description = "The collection of blog posts associated with the tag: " | append: tf | append: "." %}
-  {% elsif page.excerpt %}
+  {% elsif page.excerpt and page.layout != 'policy' %}
     {% assign description = page.excerpt | strip_html | xml_escape %}
   {% elsif page.description %}
     {% assign description = page.description | xml_escape %}
