--- a/_includes/hero_banner_brand.html
+++ b/_includes/hero_banner_brand.html
@@ -9,22 +9,12 @@
 >
   <header class="hero hero-banner mb-5 {% if include.class %}{{ include.class }}{% endif %}">
     <div class="brand-hero__content hero-container grid-container justify-content-end py-6">
-      <{% if page.layout == "toolkit" %}p{% else %}h1{% endif %} class="hero-heading {% if include.text == 'dark' %}text-ink{% endif %}">
-        {% if include.hero_title %}
-          {{ include.hero_title }}
-        {% elsif page.layout == "toolkit" %}
-          {{ site.data.toolkits[page.sidenav].title }}
-        {% else %}
-          {{ page.title }}
-        {% endif %}
-      </{% if page.layout == "toolkit" %}p{% else %}h1{% endif %}>
+      <p class="hero-heading {% if include.text == 'dark' %}text-ink{% endif %}">
+        {{ site.data.toolkits[page.sidenav].title }}
+      </p>
       <div class="hero-content mx-0 {% if include.text == 'dark' %}text-ink{% endif %}">
         <p>
-        {% if page.layout == "toolkit" %}
           {{ site.data.toolkits[page.sidenav].description }}
-        {% else %}
-          {{ include.hero_content | markdownify }}
-        {% endif %}
         </p>
       </div>
     </div>
